--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,16 +30,6 @@ body {
   padding: 3em;
 }
 
-.download {
-  opacity:0.60;
-  filter: alpha(opacity=60);
-}
-
-.download:hover {
-  opacity:1;
-  filter: alpha(opacity=100);
-}
-
 .logo {
   text-transform: uppercase;
   margin-bottom: 2em;
@@ -90,6 +80,17 @@ nav {
   text-align: center;
   padding: 80px;
   margin-bottom: 80px;
+
+  a {
+      color: #fff;
+      text-decoration: none;
+    }
+
+  img {
+    border-radius: 50%;
+    height: auto;
+    max-width: 10%;
+  }
 }
 
 #kontakt {
@@ -119,7 +120,7 @@ nav {
     padding: 20px;
     border: #bdb081 1px dashed;
     display: none;
-    float: right;    
+    float: right;
   }
 
   .formMessage.ok {
